7.24.11 (23-10-2025)
- Refactor: Remove deprecated extended degree info controllers [#qubIT-Fenix-7466]
- Refactor: Refactors MarkSheetSettings to allow multiple instances [#qubIT-Fenix-7005]

7.24.10 (04-08-2025)
- Refactor: Moves RegistrationDgesStateBean to customers-ulisboa [#qubIT-Fenix-6559]
- Refactor: Removes unused FirstTimeCandidacyDocumentsController endpoint [#qubIT-Fenix-6559]

7.24.9 (11-07-2025)
- Refactor: Remove references for CandidaciesExtensionsResources [#qubIT-Fenix-3172]

7.24.8 (08-07-2025)
- Refactor: Refactors RegistrationDGESStateBean and IngressionServices to handle new entities EducationLevelType, ProfessionCategoryType, ProfessionalStatusType [#qubIT-Fenix-7009]

7.24.7 (04-07-2025)
- Refactor: Moves StudentCandidacy fields to Registration [#qubIT-Fenix-6559]

7.24.6 (12-06-2025)
- Refactor: Remove StudentCandidacy#ExecutionDegree references [#qubIT-Fenix-6559]
- Refactor: Remove dependency of StudentCandidacy from StudentActive algorithm [#qubIT-Fenix-6559]

7.24.5 (24-02-2025)
- Refactor: Move PrecedentDegreeInformation relations from the StudentCandidacy to Registration [#qubIT-Fenix-6617]

7.24.4 (19-02-2025)
- Refactor: Removes unused viewRegistrationDetailsTreasuryDebtAccountLink_ulisboa_specification [#qubIT-Fenix-6559]
- Refactor: Removes reference to StudentCandidacy numberOfCandidaciesToHigherSchool [#qubIT-Fenix-6559]
- Improvement: Add last validation date to personal specifications [#UL-REIT-4199]

7.24.3 (07-02-2025)
- Refactor: Remove ExceptionHandlers since they are made redundant by recent fenixedu-base changes [#qubIT-Omnis-8439]
- Refactor: Removes unused ManageRegistrationEntryGradeController [#qubIT-Fenix-6559]

7.24.2 (04-02-2025)
- Refactor: Remove reference to non-existing method [#UL-ISA-5417]

7.24.1 (30-01-2025)
- Refactor: Remove usages of ITreasuryBriggeAPI [#qubIT-Fenix-6565]

7.24.0 (29-01-2025)