@@ -9,7 +9,6 @@ import java.util.stream.Collectors;
 import org.fenixedu.academic.domain.DegreeInfo;
 import org.fenixedu.academic.domain.ExecutionYear;
 import org.fenixedu.academic.domain.StudentCurricularPlan;
-import org.fenixedu.academic.domain.degree.ExtendedDegreeInfo;
 import org.fenixedu.academic.domain.degreeStructure.ProgramConclusion;
 import org.fenixedu.academic.domain.student.Registration;
 import org.fenixedu.academic.domain.student.curriculum.ExtraCurricularActivity;
@@ -67,9 +66,11 @@ public class ConclusionInformationDataProvider implements IReportDataProvider {
 
     public class ConclusionInformation {
         protected RegistrationConclusionBean conclusionBean;
+        private final DegreeInfoRecord degreeInfoRecord;
 
         public ConclusionInformation(final RegistrationConclusionBean bean) {
             this.conclusionBean = bean;
+            this.degreeInfoRecord = new DegreeInfoRecord(getDegreeInfo());
         }
 
         public RegistrationConclusionBean getConclusionBean() {
@@ -90,9 +91,8 @@ public class ConclusionInformationDataProvider implements IReportDataProvider {
             return conclusionBean.getRegistration().getDegree().getMostRecentDegreeInfo(conclusionYear.getAcademicInterval());
         }
 
-        public ExtendedDegreeInfo getExtendedDegreeInfo() {
-            final ExecutionYear conclusionYear = conclusionBean.getConclusionYear();
-            return ExtendedDegreeInfo.getMostRecent(conclusionYear, conclusionBean.getRegistration().getDegree());
+        public DegreeInfoRecord getExtendedDegreeInfo() {
+            return this.degreeInfoRecord;
         }
 
         public String getAverage() {
