@@ -1,3 +1,5 @@
+- Refactor: Remove deprecated degreeInfo and extendedDegreeInfo fields and replace them with dynamic fields [#qubIT-Fenix-6512]
+
 7.24.11 (23-10-2025)
 - Refactor: Remove deprecated extended degree info controllers [#qubIT-Fenix-7466]
 - Refactor: Refactors MarkSheetSettings to allow multiple instances [#qubIT-Fenix-7005]
